More literature fixes.

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -13,7 +13,7 @@
 %\usepackage[english,russian,ukraineb]{babel}
 \usepackage[english,ukraineb,russian]{babel}
 
-\usepackage[backend=biber,language=russian,sorting=none,maxnames=3,bibstyle=gost-numeric]{biblatex}
+\usepackage[backend=biber,language=russian,sorting=none,maxnames=10,bibstyle=gost-numeric]{biblatex}
 
 \input{defs.tex}
 
@@ -81,18 +81,21 @@
 \clearpage
 
 \thispagestyle{empty}
+
+\noindent
 Дисертацією є рукопис
 
 \vspace{3ex plus 2ex}
 
+\noindent
 Робота виконана в Національній металургійній академії України
 Міністерства освіти і науки України.
 
 
-\vspace{3ex plus 2ex}
+\vspace{4ex plus 4ex}
 
-\begin{tabular}{lp{0.58\textwidth}}
-
+\noindent
+\begin{tabular}{lp{0.64\textwidth}}
 \textbf{Науковий консультант:}
 &
 доктор технічних наук, професор,\newline
@@ -103,6 +106,16 @@
 {~} & {~}
 \\
 \textbf{Офіційні опоненти:}
+{~}
+&
+доктор фіз.-мат. наук, професор,\newline
+\textbf{Білозьоров~Василь Євгенович}
+професор кафедри комп`ютерних технологій
+Дніпропетровського національного університету
+ім.~Олеся Гончара.
+\\
+{~} & {~}
+\\
 &
 доктор технічних наук, професор,\newline
 \textbf{Бідюк Петро Іванович},
@@ -117,16 +130,6 @@
   декан механіко-математичного факультету,
   завідуючий кафедрою теоретичної та прикладної інформатики
   Харківського національного університету ім.~В.Н.~Каразіна;
-\\
-{~} & {~}
-\\
-{~}
-&
-доктор фіз.-мат. наук, професор,\newline
-\textbf{Білозьоров~Василь Євгенович}
-професор кафедри комп`ютерних технологій
-Дніпропетровського національного університету
-ім.~Олеся Гончара.
 \end{tabular}
 
 \vspace{5ex plus 4ex}
@@ -134,7 +137,7 @@
 
 \vfill
 
-Захист відбудеться 
+Захист відбудеться
 <<\_\_\_\_>>
 ~\_\_\_\_\_\_\_\_\_\_\_
 \bookyear~р. о \_\_\_\_ годині
@@ -143,17 +146,17 @@
 пр.~Гагаріна,~4.
 
 
-\vspace{3ex plus 2ex}
+\vspace{4ex plus 3ex}
 З дисертацією можна ознайомитись у бібліотеці Національної металургійної
 академії України за адресою: 49600, м.~\cityUa, пр.~Гагаріна,~4.
 
-\vspace{3ex plus 2ex}
+\vspace{4ex plus 3ex}
 Автореферат розісланий 
 <<\_\_\_\_>>
 ~\_\_\_\_\_\_\_\_\_\_\_
 \bookyear~р.
 
-\vspace{3ex plus 2ex}
+\vspace{4ex plus 3ex}
 
 \begin{tabular}{p{0.44\textwidth}p{0.2\textwidth}p{0.35\textwidth}}
 Вчений секретар спеціалізованої вченої ради 
@@ -217,7 +220,19 @@
 
 \begin{itemize}
 
-\item XXX
+
+\item
+  ``Вдосконалення технології утилізації в металургійній промисловості
+  матеріальних і енергетичних відходів'', №~держ. реєст. 0113U003266;
+
+  \item
+  ``Дослідження та імітаційне моделювання процесів нелінійної динаміки
+  формування фрактальних структур функціональних   покриттів'',
+  № держ. реєст. 0110U003240;
+
+  \item
+  ``Наукове обґрунтування та розробка ефективних тепло-масообмінних
+  процесів в інноваційних металургійних технологіях'', №~держ. реєст 0115 U003176.
 
 \end{itemize}
 
@@ -280,17 +295,18 @@
 \textbf{Методи дослідження.}
 Для вирішення поставлених задач використовувався математичний апарат
 теорії управління та ідентифікації нелінійних систем, динамічного хаосу,
-обчислювальних методів, нечіткої логіки, теорії інформації, тощо.
+обчислювальних методів, нечіткої логіки, теорії інформації тощо.
 
 \smallskip
 \textbf{Наукова новизна одержаних результатів:}
-Основний науковий результат полягає в розробці нових методів ідентифікації
+Основний науковий результат полягає в розв'язанні проблеми
+синтезу методів ідентифікації
 технічних систем хаотичної динаміки, створенні відповідних математичних
 моделей та дослідженні результатів моделювання процесів
 адаптивно-пошукової ідентифікації.
 
 Основні наукові результати, що отримані в дисертаційної роботі, полягають
- в наступному:
+в наступному:
 
 \begin{itemize}
 
@@ -383,7 +399,7 @@
 
 Усі основні положення і результати
 дисертаційної роботи, які виносяться на захист, отримано здобувачем особисто та
-опубліковано в роботах [1--46]. У наукових працях, опублікованих у співавторстві,
+опубліковано в роботах [1--50]. У наукових працях, опублікованих у співавторстві,
 здобувачу належать наступні результати. У роботі [1] \ldots
 
 
@@ -391,12 +407,31 @@
 \smallskip
 \textbf{Апробація результатів.}
 Основні положення дисертаційної роботи доповідались на наукових
-семінарах кафедри ІТС, \ldots
+семінарах кафедри ІТС,
+регіональному науковому семінарі Придніпровського Наукового Центру НАН України
+''Сучасні проблеми управління та моделювання складних систем'',
+науково-практичних коференціях:
+``Інформатика та системні науки'' (ІСН-2011) Полтава--2011,
+``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2011,
+``Информационные технологии в управлении сложными системами'' Днепропетровск--2011,
+``Автоматизация: проблемы, идеи, решения'' Севастополь-2011,
+``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2012,
+``Автоматизация: проблемы, идеи, решения'' Севастополь-2012,
+``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2013,
+``Автоматизация: проблемы, идеи, решения'' Севастополь-2013,
+``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2014,
+``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2015,
+``Computer Sciences and Information Technologies'' (CSIT) Lviv--2015 (Scopus),
+``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2016,
+``Data Stream Mining and Processing'' DSMP Lviv-2016 (Scopus,Web of Science).
 
 \smallskip
 \textbf{Публікації.}
 По темі дисертації опубліковано
-46 друкованих праць:
+51 друкована праця,
+з них
+25 входять до до міжнародних наукометрічних баз,
+13 статей опубліковано у матеріалах конференцій.
 
 \smallskip
 \textbf{Структура і обсяг роботи.}
@@ -462,7 +497,24 @@ XX найменувань,
 координаторми пошуку для досягнення мети
 задачі ідентифікації, та засоби адаптації.
 
-Введено класификацю структури та методів систем іденіификації у цілому.
+Визначення:
+\textbf{пошуковий агент} -- це динамічна система, яка отримує вихідний ($x(t)$),
+і, при необхідності вхідний ($u(t)$) сигнал від однієї або декількох моделей, величину критерію
+ідентифікації, визначену для об'єкта, може бути обмінюючись інформацією з
+іншими елементами пошукової системи, на підставі значення критерію
+ідентифікації реалізує алгоритм настройки параметра моделі (моделей) таким
+чином, щоб забезпечити ідентифікацію заданого параметра.
+
+Визначення:
+\textbf{координатор пошуку} -- це динамічна система, яка отримує інформацію
+від пошукових агентів, і на підставі цієї інформації визначає
+$p_{id}(t)$ - шукану величину ідентифікованого параметра.
+Крім цього, координатор може, на підставі цієї ж інформації,
+керувати процесом адаптації всієї пошукової системи.
+
+Таким чином, система ідентифікації складається з множини агентів, та
+множини координаторів пошуку, які спільно вирішують задачу ідентифікації.
+
 
 Запропановано метод оцінювання помилок ідентификації
 з врахування мультиагентної структури.
@@ -584,7 +636,7 @@ BJT транзистора, та різних режимів роботи.
 
 \nocite{*}
 
-\printbibliography
+\printbibliography[heading=none]
 
 
 
