--- a/atuworks.bib
+++ b/atuworks.bib
@@ -3,9 +3,10 @@
 @string{ mai  = "Михалёв, А. И." }
 @string{ atum = "Гуда, А. И. and Михалёв, А. И." }
 @string{ atume= "Guda, A. I. and Mikhalyov, A. I." }
+@string{ kher= {Вестник Херсонского национального технического университета" (РИНЦ)} }
 
 @xdata{asau,
-  journal = {Адаптивні системи автоматичного управління. Міжвідом. науково - техн. зб.},
+  journal = {Адаптивні системи автоматичного управління. Міжвідом. науково-техн. зб.},
   location = {Днепропетровск},
 }
 
@@ -21,21 +22,10 @@
 
 
 @xdata{ISDMCI,
-  journal = {Материалы международной конференции ``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI)},
+  booktitle = {Материалы международной конференции ``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI)},
   location = {Херсон: ХНТУ},
   publisher = {ХНТУ},
 }
-
-%@Article{atu_asau3,
-%  title = {Сравнительный анализ алгоритмов поисковой идентификации нелинейных систем},
-%  author = atum,
-%  xdata = {asau},
-%  language     = {russian},
-%  langid       = {russian},
-%  year = {2000},
-%  pages = {99--108},
-%  number = {3(23)}
-%}
 
 @Article{atu_asau10,
   title = {Информационные оценки сложности задачи параметрической идентификации динамических систем},
@@ -59,6 +49,7 @@
   pages = {136--142}
 }
 
+% РИНЦ, elib
 @Article{atu_asau12,
   title = {Адаптивно-поисковая идентификация хаотической динамической системы Дуффинга},
   xdata = {asau},
@@ -81,6 +72,7 @@
   pages = {19--27}
 }
 
+% РИНЦ, elib
 @Article{atu_asau13,
   title = {Использование методов нечеткого вывода для оценки тяжести  общего состояния больных разлитым перитонитом},
   author = {Новикова, Е. Ю. and Кутовой, А. Б. and Михалёв, А. И. and Гуда, А. И. },
@@ -92,8 +84,9 @@
   pages = {159--165}
 }
 
+% РИНЦ, elib
 @Article{atu_asau14,
-  title = {Адаптивно-поисковая идентификация хаотической динамической системы Ресслера},
+  title = {Адаптивно-поисковая идентификация хаотической динамической системы Рёсслера},
   xdata = {asau},
   author = atum,
   language     = {russian},
@@ -104,7 +97,7 @@
 }
 
 
-% TODO: Copernicus?
+% TODO: Copernicus? РИНЦ, elib
 @Article{atu_khar_autodor25,
   title = {Критерии идентификации параметров хаотической динамики управляемого объекта},
   author = {Гуда, А. И. and Михалёв, А. И. and Деревянко, А. И.},
@@ -116,6 +109,7 @@
   pages = {254--257}
 }
 
+% РИНЦ, elib
 @Article{atu_asau15,
   title = {Влияние возмущений входного сигнала на динамику и идентификацию нелинейной  системы {Дуффинга}},
   xdata = {asau},
@@ -127,6 +121,7 @@
   pages = {121--125}
 }
 
+% РИНЦ, elib
 @Article{atu_asau16,
   title = {Выбор критерия при адаптивно-поисковой идентификации динамической системы Ван-Дер-Поля},
   xdata = {asau},
@@ -139,8 +134,9 @@
 }
 
 
+% РИНЦ, elib
 @Article{atu_asau17,
-  title = {Исследование альтернативного критерия при адаптивно- поисковой идентификации динамической системы Ван-Дер-Поля},
+  title = {Исследование альтернативного критерия при адаптивно-поисковой идентификации динамической системы Ван-Дер-Поля},
   xdata = {asau},
   author = atum,
   language     = {russian},
@@ -150,16 +146,6 @@
   pages = {149--154}
 }
 
-
-@Article{atu_ich2011,
-  title = {Выбор критериев для оценки эффективности процессов идентификации систем с хаотической динамикой },
-  author = atum,
-  language     = {russian},
-  langid       = {russian},
-  journal = { Матеріали П Всеукраїнської науково-практичної конференції «Інформатика та системні науки» (ІСН-2011). – Полтава, 17-19.03.2011. – Полтава: РВВ ПУЕТ},
-  year = {2011},
-  pages = {355}
-}
 
 @Article{atu_st75,
   title = {Сравнительный анализ двух критериев адаптивно-поисковой идентификации нелинейной динамической системи Ван-Дер-Поля},
@@ -172,30 +158,10 @@
   pages = {15--20}
 }
 
-@Article{atu_ISDMCI2011,
-  title = {Идентификация систем с хаотической динамикой},
-  author = atum,
-  xdata = {ISDMCI},
-  language     = {russian},
-  langid       = {russian},
-  year = {2011},
-  eventdate = {2011-05},
-  number = {2},
-  pages = {211--212}
-}
 
-@Article{atu_itcs2011,
-  title = {Адаптивно-поисковая идентификация нелинейной динамической системы Ван-дер-Поля},
-  author = atum,
-  journal = {Информационные технологии в управлении сложными системами. Сборник докладов научной конференции (Днепропетровск, 24 июня 2011). -Днепропетровск: изд-во «Свидлер А.Л.»},
-  language     = {russian},
-  langid       = {russian},
-  year = {2011},
-  pages = {39--40}
-}
-
+% РИНЦ, elib
 @Article{atu_asau18,
-  title = {Синтез критериев при адаптивно-поисковой идентификации динамической системы Чуа},
+  title = {Синтез критерия при адаптивно-поисковой идентификации динамической системы Чуа},
   xdata = {asau},
   author = atum,
   language     = {russian},
@@ -203,17 +169,6 @@
   year = {2011},
   number = {18(38)},
   pages = {140--146}
-}
-
-@Article{atu_apir2011,
-  title = {Адаптивно-поисковая идентификация нелинейной хаотической системы Чуа},
-  journal = apir,
-  author = atum,
-  language     = {russian},
-  langid       = {russian},
-  eventdate = {2011-09},
-  year = {2011},
-  pages = {18--19}
 }
 
 @Article{atu_st67,
@@ -227,8 +182,9 @@
   pages = {114--118}
 }
 
+% РИНЦ, elib
 @Article{atu_asau19,
-  title = {Моделювання та дослiдження хаотичної динамiки зв’язаних релаксацiйних генераторiв},
+  title = {Моделирование и исследование хаотической динамики связанных релаксационных генераторов},
   xdata = {asau},
   author = atum,
   language     = {russian},
@@ -249,27 +205,6 @@
   pages = {13--19}
 }
 
-@Article{atu_ISDMCI2012,
-  title = {Альтернативный критерий идентификации хаотической системы Рёсслера},
-  xdata = {ISDMCI},
-  author = atum,
-  language     = {russian},
-  langid       = {russian},
-  year = {2012},
-  pages = {247--249}
-}
-
-@Article{atu_apir2012,
-  title = {Синтез критерия идентификации нелинейной хаотической системы Лоренса},
-  journal = apir,
-  author = atum,
-  language     = {russian},
-  langid       = {russian},
-  year = {2012},
-  eventdate = {2012-09},
-  pages = {11--13}
-}
-
 @Article{atu_st85,
   title = {Chaotic system with relay hysteresis in return force: simulation and analysis},
   xdata = {st},
@@ -280,16 +215,7 @@
   pages = {30--35}
 }
 
-@Article{atu_ISDMCI2013,
-  title = {Хаотические колебательные системы с зоной нечувствительности и релейным гистерезисом в восстанавливающей силе},
-  author = atum,
-  xdata = {ISDMCI},
-  language     = {russian},
-  langid       = {russian},
-  year = {2013},
-  pages = {434--435}
-}
-
+% РИНЦ, elib
 @Article{atu_asau20,
   title = {Моделирование хаотической динамики системы с зоной нечувствительности и идентификация её параметров},
   xdata = {asau},
@@ -301,6 +227,7 @@
   pages = {180--186}
 }
 
+% РИНЦ, elib
 @Article{atu_asau21,
   title = {Генератор Колпитца: моделирование хаотической динамики и параметрическая идентификация},
   xdata = {asau},
@@ -310,17 +237,6 @@
   year = {2012},
   number = {21(41)},
   pages = {146--153}
-}
-
-@Article{atu_apir2013,
-  title = {Идентификация бифуркационного параметра генератора Колптица},
-  author = atum,
-  journal = apir,
-  language     = {russian},
-  langid       = {russian},
-  year = {2013},
-  eventdate = {2013-09},
-  pages = {104-105}
 }
 
 @Article{atu_st91,
@@ -334,16 +250,7 @@
   pages = {154--158}
 }
 
-@Article{atu_ISDMCI2014,
-  title = {Совместное влияние изменений параметров системы адаптивно-поисковой идентификации хаотических систем объектов  на процесс поиска},
-  author = atum,
-  xdata = {ISDMCI},
-  language     = {russian},
-  langid       = {russian},
-  year = {2014},
-  pages = {63--64}
-}
-
+% РИНЦ, elib
 @Article{atu_asau22,
   title = {Настройка адаптивно-поисковой системы идентификации применительно к хаотическим объектам},
   xdata = {asau},
@@ -356,6 +263,7 @@
 }
 
 
+% РИНЦ, elib
 @Article{atu_asau23,
   title = {Расширение рабочего диапазона поисковой идентификации нелинейных динамических систем},
   xdata = {asau},
@@ -368,6 +276,7 @@
 }
 
 
+% РИНЦ, elib
 @Article{atu_asau24,
   title = {Повышение качества фильтрации при поисковой идентификации нелинейных динамических систем},
   xdata = {asau},
@@ -390,7 +299,21 @@
   pages = {32--34}
 }
 
+% РИНЦ, elib
+@Article{atu_kher2014,
+  title = {Расширение рабочего диапазона при поисковой идентификации хаотической системы Чуа},
+  author = atum,
+  journal = kher,
+  language     = {russian},
+  langid       = {russian},
+  year = {2014},
+  number = {3(50)},
+  pages = {265--258}
+}
 
+
+
+% РИНЦ, elib
 @Article{atu_asau25,
   title = {Использование нечётких технологий при выборе начальных условий  в задачах идентификации систем с хаотической динамикой},
   xdata = {asau},
@@ -412,37 +335,19 @@
   pages = {3--9}
 }
 
-@Article{atu_asau27,
+% РИНЦ, elib
+@Article{atu_asau26,
   title = {Использование метода идентификации с множеством подвижных моделей применительно к динамической системе Лоренса},
   xdata = {asau},
   author = atum,
   language     = {russian},
   langid       = {russian},
   year = {2015},
-  number = {1(27)},
+  number = {1(26)},
   pages = {191--197}
 }
 
-@Article{atu_ISDMCI2015,
-  title = {Применение многомодельного метода в задаче параметрической  идентификации хаотической системы Лоренса},
-  xdata = {ISDMCI},
-  author = atum,
-  language     = {russian},
-  langid       = {russian},
-  year = {2015},
-  pages = {53--54}
-}
 
-@Article{atu_csit2015,
-  title = {Method of Lorenz systems parametric identification by the searching models ensemble},
-  author = atume,
-  journal = {Scientific and Technical Conference ``Computer Sciences and Information Technologies'' (CSIT) (Scopus)},
-  language     = {english},
-  langid       = {english},
-  year = {2015},
-  doi = {10.1109/STC-CSIT.2015.7325435},
-  pages = {73--75}
-}
 
 @Article{atu_arsirii,
   title = {Система поддержки принятия решений по повышению эффективности гидроаеродинамических процессов во вспомогательных элементах    энергетических агрегатов},
@@ -457,10 +362,11 @@
 }
 
 
+% РИНЦ, elib
 @Article{atu_kher2015,
   title = {Настройка параметров системы мультимодельной адаптивно-поисковой системы идентификации},
   author = atum,
-  journal = {Вестник ХНТУ. – Херсон: Херсонский национальный технический университет. (РИНЦ).},
+  journal = kher,
   language     = {russian},
   langid       = {russian},
   year = {2015},
@@ -487,6 +393,17 @@
   year = {2016},
   number = {4(105)},
   pages = {18--24}
+}
+
+@Article{atu_asau27,
+  title = {Three-model methods for extremum extimation in non-linear dynamic system identification},
+  xdata = {asau},
+  author = atume,
+  language     = {english},
+  langid       = {english},
+  year = {2016},
+  number = {2(27)},
+  pages = {160--165}
 }
 
 @Article{atu_jacs2015,
@@ -522,27 +439,19 @@
   pages = {141--146}
 }
 
-@Article{atu_ISDMCI2016,
-  title = {Применение различных функций качества идентификации при использовании ансамбля поисковых агентов в задаче идентификации нелинейных динамических систем},
-  xdata = {ISDMCI},
+% РИНЦ, elib
+@Article{atu_kher2016,
+  title = {Синтез критерия для идентификации хаотической системы ``Sprott A'' с использованием мультимодельного адаптивно-поискового метода},
   author = atum,
+  journal = kher,
   language     = {russian},
   langid       = {russian},
+  location = {Херсон},
   year = {2016},
-  pages = {53--54}
+  number = {3(58)},
+  pages = {204--207}
 }
 
-
-@Article{atu_DSMP2016,
-  title = {Criteria synthesis problem for the chaotic systems identification},
-  author = atume,
-  journal = {Proceedings of the 2016 IEEE 1st International Conference on Data Stream Mining and Processing, DSMP 2016, (Web of Science, Scopus)},
-  location = {Lviv, Ukraine},
-  language     = {english},
-  langid       = {english},
-  year = {2016},
-  pages = {125--128}
-}
 
 @Article{atu_ric2016,
   title = {Multi-models identification methods comparison in the non-linear dynamic system identification task},
@@ -558,11 +467,10 @@
 }
 
 @Inbook{atu_colmono2016,
-  booktitle = {Системные технологии моделирования сложных систем},
+  booktitle = {Коллективная монография ``Системные технологии моделирования сложных систем'' под. ред. Михалёва~А.И.},
   title = {Оценивание эффективности применения интегральных критериев в задачах параметрической идентификации хаотических систем},
   author = atum,
-  editor = mai,
-  location = {Днипро},
+  location = {Днепр},
   language     = {russian},
   langid       = {russian},
   year = {2016},
@@ -570,8 +478,151 @@
 }
 
 
+% ------------------- confereces -----------------------------
+
+@Inproceedings{atu_ich2011,
+  title = {Выбор критериев для оценки эффективности процессов идентификации систем с хаотической динамикой },
+  author = atum,
+  language     = {russian},
+  langid       = {russian},
+  booktitle = { Матеріали Всеукраїнської науково-практичної конференції ``Інформатика та системні науки'' (ІСН-2011). – Полтава, 17-19.03.2011. – Полтава: РВВ ПУЕТ},
+  year = {2011},
+  pages = {355}
+}
+
+@Inproceedings{atu_ISDMCI2011,
+  title = {Идентификация систем с хаотической динамикой},
+  author = atum,
+  xdata = {ISDMCI},
+  language     = {russian},
+  langid       = {russian},
+  year = {2011},
+  eventdate = {2011-05},
+  number = {2},
+  pages = {211--212}
+}
+
+@Inproceedings{atu_itcs2011,
+  title = {Адаптивно-поисковая идентификация нелинейной динамической системы Ван-дер-Поля},
+  author = atum,
+  booktitle = {Информационные технологии в управлении сложными системами. Сборник докладов научной конференции -- Днепропетровск: изд-во ``Свидлер А.Л.''},
+  location = {Днепропетровск},
+  language     = {russian},
+  langid       = {russian},
+  year = {2011},
+  month = {7},
+  pages = {39--40}
+}
+
+@Inproceedings{atu_apir2011,
+  title = {Адаптивно-поисковая идентификация нелинейной хаотической системы Чуа},
+  booktitle = apir,
+  author = atum,
+  language     = {russian},
+  langid       = {russian},
+  eventdate = {2011-09},
+  location = {Севастополь : СевНТУ},
+  year = {2011},
+  pages = {18--19}
+}
+
+@Inproceedings{atu_ISDMCI2012,
+  title = {Альтернативный критерий идентификации хаотической системы Рёсслера},
+  xdata = {ISDMCI},
+  author = atum,
+  language     = {russian},
+  langid       = {russian},
+  year = {2012},
+  pages = {247--249}
+}
+
+@Inproceedings{atu_apir2012,
+  title = {Синтез критерия идентификации нелинейной хаотической системы Лоренса},
+  booktitle = apir,
+  author = atum,
+  language     = {russian},
+  langid       = {russian},
+  year = {2012},
+  location = {Севастополь : СевНТУ},
+  eventdate = {2012-09},
+  pages = {11--13}
+}
+
+@Inproceedings{atu_ISDMCI2013,
+  title = {Хаотические колебательные системы с зоной нечувствительности и релейным гистерезисом в восстанавливающей силе},
+  author = atum,
+  xdata = {ISDMCI},
+  language     = {russian},
+  langid       = {russian},
+  year = {2013},
+  pages = {434--435}
+}
+
+@Inproceedings{atu_apir2013,
+  title = {Идентификация бифуркационного параметра генератора Колптица},
+  author = atum,
+  booktitle = apir,
+  language     = {russian},
+  langid       = {russian},
+  year = {2013},
+  location = {Севастополь : СевНТУ},
+  eventdate = {2013-09},
+  pages = {104--105}
+}
+
+@Inproceedings{atu_ISDMCI2014,
+  title = {Совместное влияние изменений параметров системы адаптивно-поисковой идентификации хаотических систем объектов  на процесс поиска},
+  author = atum,
+  xdata = {ISDMCI},
+  language     = {russian},
+  langid       = {russian},
+  year = {2014},
+  pages = {63--64}
+}
+
+@Inproceedings{atu_ISDMCI2015,
+  title = {Применение многомодельного метода в задаче параметрической  идентификации хаотической системы Лоренса},
+  xdata = {ISDMCI},
+  author = atum,
+  language     = {russian},
+  langid       = {russian},
+  year = {2015},
+  pages = {53--54}
+}
+
+@Inproceedings{atu_csit2015,
+  title = {Method of Lorenz systems parametric identification by the searching models ensemble},
+  author = atume,
+  booktitle = {Scientific and Technical Conference ``Computer Sciences and Information Technologies'' (CSIT) (Scopus)},
+  language     = {english},
+  langid       = {english},
+  year = {2015},
+  doi = {10.1109/STC-CSIT.2015.7325435},
+  pages = {73--75}
+}
+
+@Inproceedings{atu_ISDMCI2016,
+  title = {Применение различных функций качества идентификации при использовании ансамбля поисковых агентов в задаче идентификации нелинейных динамических систем},
+  xdata = {ISDMCI},
+  author = atum,
+  language     = {russian},
+  langid       = {russian},
+  year = {2016},
+  pages = {53--54}
+}
 
 
+@Inproceedings{atu_DSMP2016,
+  title = {Criteria synthesis problem for the chaotic systems identification},
+  author = atume,
+  booktitle = {Proceedings of the 2016 IEEE 1st International Conference on Data Stream Mining and Processing, DSMP 2016, (Web of Science, Scopus, РИНЦ)},
+  location = {Lviv, Ukraine},
+  language     = {english},
+  langid       = {english},
+  year = {2016},
+  month = {8},
+  pages = {125--128}
+}
 
 
 
