--- a/defs.tex
+++ b/defs.tex
@@ -33,7 +33,7 @@
 \newcommand{\belongEn}{Ministry of Education and Science of Ukraine}
 \newcommand{\belongMain}{\belongRu}
 \newcommand{\belongAref}{\belongUa}
-\newcommand{\cityRu}{Днипро}
+\newcommand{\cityRu}{Днепр}
 \newcommand{\cityUa}{Дніпро}
 \newcommand{\cityEn}{Dnipro}
 \newcommand{\cityMain}{\cityRu}
