On-line paches from MAI.

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -299,7 +299,7 @@
 
 \smallskip
 \textbf{Наукова новизна одержаних результатів:}
-Основний науковий результат полягає в розв'язанні проблеми
+Основний науковий результат полягає в розв'язанні науково-практичної проблеми
 синтезу методів ідентифікації
 технічних систем хаотичної динаміки, створенні відповідних математичних
 моделей та дослідженні результатів моделювання процесів
@@ -498,17 +498,18 @@ XX найменувань,
 задачі ідентифікації, та засоби адаптації.
 
 Визначення:
-\textbf{пошуковий агент} -- це динамічна система, яка отримує вихідний ($x(t)$),
-і, при необхідності вхідний ($u(t)$) сигнал від однієї або декількох моделей, величину критерію
-ідентифікації, визначену для об'єкта, може бути обмінюючись інформацією з
-іншими елементами пошукової системи, на підставі значення критерію
-ідентифікації реалізує алгоритм настройки параметра моделі (моделей) таким
-чином, щоб забезпечити ідентифікацію заданого параметра.
+\textbf{пошуковий агент} -- це динамічна система, яка отримує вихідні ($x(t)$),
+і, при необхідності вхідні ($u(t)$) сигнали від однієї або декількох моделей,
+величину оцінки стану об'єкту за критерієм ідентифікації,
+може обмінююватися інформацією з іншими елементами пошукової системи,
+та на підставі значення критерію
+ідентифікації реалізує алгоритм настройки параметрів моделі (моделей) таким
+чином, щоб забезпечити визначення заданого параметра.
 
 Визначення:
 \textbf{координатор пошуку} -- це динамічна система, яка отримує інформацію
-від пошукових агентів, і на підставі цієї інформації визначає
-$p_{id}(t)$ - шукану величину ідентифікованого параметра.
+від пошукових агентів і на підставі цієї інформації визначає
+$p_{\mathrm{id}}(t)$ -- шукану величину ідентифікованого параметра.
 Крім цього, координатор може, на підставі цієї ж інформації,
 керувати процесом адаптації всієї пошукової системи.
 
