Remove 2 entries from atuworks.bib

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -128,7 +128,7 @@
 доктор технічних наук, професор,\newline
 \textbf{Жолткевич Григорій Миколайович},
   декан механіко-математичного факультету,
-  завідуючий кафедрою теоретичної та прикладної інформатики
+  завідувач кафедри теоретичної та прикладної інформатики
   Харківського національного університету ім.~В.Н.~Каразіна;
 \end{tabular}
 
@@ -428,9 +428,9 @@
 \smallskip
 \textbf{Публікації.}
 По темі дисертації опубліковано
-51 друкована праця,
+49 друкована праця,
 з них
-25 входять до до міжнародних наукометрічних баз,
+24 входять до до міжнародних наукометрічних баз,
 13 статей опубліковано у матеріалах конференцій.
 
 \smallskip
