--- a/atuworks.bib
+++ b/atuworks.bib
@@ -61,28 +61,28 @@
   pages = {166--171}
 }
 
-@Article{atu_aaeks22,
-  title = {Исследование правил клеточных автоматов для моделирования процессов затвердевания квазиравновесных бинарных сплавов},
-  journal = {Автоматика. Автоматизація. Электротехнические Комплексы и Системы – ААЭКС.},
-  author = {Михайловская, Т. В. and Михалёв, А. И. and Гуда, А. И.},
-  language     = {russian},
-  langid       = {russian},
-  year = {2008},
-  number = {2(22)},
-  pages = {19--27}
-}
+%@Article{atu_aaeks22,
+%  title = {Исследование правил клеточных автоматов для моделирования процессов затвердевания квазиравновесных бинарных сплавов},
+%  journal = {Автоматика. Автоматизація. Электротехнические Комплексы и Системы – ААЭКС.},
+%  author = {Михайловская, Т. В. and Михалёв, А. И. and Гуда, А. И.},
+%  language     = {russian},
+%  langid       = {russian},
+%  year = {2008},
+%  number = {2(22)},
+%  pages = {19--27}
+%}
 
-% РИНЦ, elib
-@Article{atu_asau13,
-  title = {Использование методов нечеткого вывода для оценки тяжести  общего состояния больных разлитым перитонитом},
-  author = {Новикова, Е. Ю. and Кутовой, А. Б. and Михалёв, А. И. and Гуда, А. И. },
-  language     = {russian},
-  langid       = {russian},
-  xdata = {asau},
-  year = {2008},
-  number = {13(33)},
-  pages = {159--165}
-}
+%% РИНЦ, elib
+%@Article{atu_asau13,
+%  title = {Использование методов нечеткого вывода для оценки тяжести  общего состояния больных разлитым перитонитом},
+%  author = {Новикова, Е. Ю. and Кутовой, А. Б. and Михалёв, А. И. and Гуда, А. И. },
+%  language     = {russian},
+%  langid       = {russian},
+%  xdata = {asau},
+%  year = {2008},
+%  number = {13(33)},
+%  pages = {159--165}
+%}
 
 % РИНЦ, elib
 @Article{atu_asau14,
