Remove active commands from defs.tex

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -16,6 +16,13 @@
 \usepackage[backend=biber,language=russian,sorting=none,maxnames=10,bibstyle=gost-numeric]{biblatex}
 
 \input{defs.tex}
+\renewcommand{\Rada}{\dissRada}
+\renewcommand{\SekrRadi}{\dissSekrRadi}
+
+\author{\dissauthorFullAref}
+
+\title{\booknameUa}
+\date{\bookyear}
 
 \addbibresource{atuworks.bib}
 
@@ -44,7 +51,7 @@
 
 \vspace{3ex}
 
-\textbf{Гуда Антон Ігорович}
+\textbf{\dissauthorFullAref}
 
 \end{center}
 
