--- a/atudiss.tex
+++ b/atudiss.tex
@@ -11,17 +11,25 @@
 
 \input{defs.tex}
 
+\renewcommand{\Rada}{\dissRada}
+\renewcommand{\SekrRadi}{\dissSekrRadi}
+
+\author{\dissauthorFullRu}
+
+\title{\booknameRu}
+\supervisor{\superMain}{д.т.н., проф.}
+\date{\bookyear}
+
 %\setstretch{1.2}
 
 
-%\author{\dissauthor}
 
 \addbibresource{atuworks.bib}
 \addbibresource{artrefs.bib}
 
 \hypersetup{
   pdftitle={\bookname},
-  pdfauthor={\dissauthor},
+  pdfauthor={\dissauthorMain},
   colorlinks=true,
   linkcolor=blue,
   citecolor=brown
