--- a/defs.tex
+++ b/defs.tex
@@ -8,7 +8,13 @@
 \newcommand{\dissauthorUa}{Гуда~А.І.}
 \newcommand{\dissauthorRu}{Гуда~А.И.}
 \newcommand{\dissauthorEn}{Guda~A.I.}
-\newcommand{\dissauthor}{\dissauthorRu}
+\newcommand{\dissauthorFullRu}{Гуда Антон Игоревич}
+\newcommand{\dissauthorFullUa}{Гуда Антон Ігорович}
+\newcommand{\dissauthorMain}{\dissauthorRu}
+\newcommand{\dissauthorAref}{\dissauthorUa}
+\newcommand{\dissauthorFullMain}{\dissauthorFullRu}
+\newcommand{\dissauthorFullAref}{\dissauthorFullUa}
+
 \newcommand{\dissSpecUa}{математичне    моделювання  та обчислювальні методи}
 \newcommand{\dissSpecRu}{математическое моделирование и вычислительные методы}
 \newcommand{\dissSpecEn}{Mathematical Modelling and Computational Methods}
@@ -21,8 +27,7 @@
 \newcommand{\dissScopeAref}{\dissScopeUa}
 \newcommand{\UDC}{681.5.015}
 \newcommand{\dissRada}{Д.~08.084.01}
-\renewcommand{\Rada}{Д.~08.084.01}
-\renewcommand{\SekrRadi}{Селівьорстова~Т.В.}
+\newcommand{\dissSekrRadi}{Селівьорстова~Т.В.}
 \newcommand{\institutionRu}{Национальная металлургическая академия Украины}
 \newcommand{\institutionUa}{Національна  металургійна     академія України}
 \newcommand{\institutionEn}{National Metallurgical academy of Ukraine}
@@ -42,12 +47,4 @@
 \newcommand{\superUa}{Михальов Олександр Ілліч}
 \newcommand{\superMain}{\superRu}
 \newcommand{\superAref}{\superUa}
-
-\title{\booknameRu}
-\author{Гуда Антон Игоревич}
-\supervisor{Михалёв Александр Ильич}{д.т.н., проф.}
-%\speciality[\dissSpecRu]{{01.05.02}}[технических наук]
-%\udc{681.5.015}
-\date{\bookyear}
-%\institution{Национальная металлургическая академия Украины, Министерство образования и науки Украины}{Днипро}
 
