Remove vakthesis, small additions in presentation

--- a/p0/p0.tex
+++ b/p0/p0.tex
@@ -63,12 +63,14 @@
 
 \textit{Методы исследования} ---
 математический аппарат теории управления и идентификации,
+динамического хаоса,
+нечёткой логики,
 вычислительные методы,
-теория информации,
+теория информации
 \ldots
 
 \paragraph{Научная новизна результатов диссертационной работы} заключается в
-развитии теории 
+развитии теории
 
 Основные результаты, определяющие новизну диссертационной работы,
 состоят в следующем:
