--- a/pres/pres_atu.tex
+++ b/pres/pres_atu.tex
@@ -1,11 +1,8 @@
 \documentclass[10pt,utf8]{beamer}
 \setbeamersize{text margin left=15pt,text margin right=15pt}
-\usepackage{hyperref}
 \usepackage{cmap}
-\usepackage[utf8]{inputenc}
 \usepackage[T1,T2A]{fontenc}
 \usefonttheme[onlymath]{serif}
-%\usepackage{dejavu}
 \usepackage{paratype}
 \usepackage {latexsym}
 %\usepackage {fancybox}
@@ -16,7 +13,7 @@
 %\addtobeamertemplate{navigation symbols}{}{ \hspace{1em}  \usebeamerfont{footline}  {\normalsize \insertframenumber / \inserttotalframenumber}}
 \addtobeamertemplate{navigation symbols}{}{ \hspace{1em}  \usebeamerfont{footline}  {\normalsize \color{black} \insertframenumber }}
 
-% \usepackage{tikz}
+\usepackage{tikz}
 % \usetikzlibrary{tikzmark,calc}
 \usepackage[english,russian]{babel}
 \usepackage{bropd} % od, pd
@@ -29,15 +26,14 @@
 
 \author{\dissauthorRu}
 
-%\title{\booknameRu}
-\title{Семинар -- 2017 }
+\title[Семинар -- 2017]{\booknameRu}
 
 \begin{document}
 
 \begin{frame}
   \frametitle{}
   \begin{center}
-    {\LARGE \color{blue} \booknameRu}
+    {\Large \color{blue} \booknameRu}
 
     \vfill
 
@@ -52,7 +48,7 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Актуальность}
   %\framesubtitle{}
 
 
@@ -62,31 +58,24 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Объект, предмет, методы}
   %\framesubtitle{}
 
+\textbf{Объект исследования} ---
+системы адаптивно-поисковой идентификации систем хаотической динамики.
 
-\end{frame}
+\smallskip
 
+\textbf{Предмет исследования} ---
+математические модели систем адаптивно-поисковой идентификации систем хаотической динамики.
 
+\smallskip
 
-% -----------------------------------------------------------------------
-
-\begin{frame}
-  \frametitle{}
-  %\framesubtitle{}
-
-
-\end{frame}
-
-
-
-% -----------------------------------------------------------------------
-
-\begin{frame}
-  \frametitle{}
-  %\framesubtitle{}
-
+\textbf{Методы исследования} ---
+математический аппарат теории управления и идентификации,
+вычислительные методы,
+теория информации
+\ldots
 
 \end{frame}
 
@@ -480,7 +469,7 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Научная новизна}
   %\framesubtitle{}
 
 
@@ -491,7 +480,64 @@
 % -----------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{}
+  \frametitle{Практическая ценность}
+  %\framesubtitle{}
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Печатные работы и апробация}
+  %\framesubtitle{}
+
+{\scriptsize
+По теме дисертации опубликовано
+49 печатных работ,
+из них
+24 входят в международные наукометрические базы,
+13 статей опубликовано в материалах конференций.
+
+Основные положения дисертационной работи докладывались на
+научно-практических коференциях:
+``Інформатика та системні науки'' (ІСН-2011) Полтава--2011,
+``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2011,
+``Информационные технологии в управлении сложными системами'' Днепропетровск--2011,
+``Автоматизация: проблемы, идеи, решения'' Севастополь-2011,
+``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2012,
+``Автоматизация: проблемы, идеи, решения'' Севастополь-2012,
+``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2013,
+``Автоматизация: проблемы, идеи, решения'' Севастополь-2013,
+``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2014,
+``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2015,
+``Computer Sciences and Information Technologies'' (CSIT) Lviv--2015 (Scopus),
+``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2016,
+``Data Stream Mining and Processing'' DSMP Lviv-2016 (Scopus,Web of Science).
+}
+
+\end{frame}
+
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Выводы 1}
+  %\framesubtitle{}
+
+
+\end{frame}
+
+
+
+% -----------------------------------------------------------------------
+
+\begin{frame}
+  \frametitle{Выводы 2}
   %\framesubtitle{}
 
 
